# inneri-secure

./: LICENSE  README.md
InnerI-Secure-Repo/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
InnerI-Secure-Repo/.github/workflows/: ci.yml
InnerI-Secure-Repo/db/: schema.sql  seed.sql
InnerI-Secure-Repo/gateway/: Dockerfile  requirements.txt
InnerI-Secure-Repo/gateway/inneri_gateway/: audit.py  config.py  db.py  jwt_auth.py  main.py  models.py  policy.py  schemas.py  secrets_vault.py  security.py  tools_runtime.py
InnerI-Secure-Repo/policies/: policy.rego
InnerI-Secure-Repo/sdk-python/: README.md  pyproject.toml
InnerI-Secure-Repo/sdk-python/examples/: 01_secure_call.py
InnerI-Secure-Repo/sdk-python/src/inneri/: __init__.py  __main__.py  client.py  keys.py
InnerI-Secure-Repo/tools/: echo.json  math_eval.json  time_now.json
InnerI-Secure-Repo/vault/: init.sh
